fix low contrast color

--- a/styles/base.css
+++ b/styles/base.css
@@ -29,7 +29,7 @@ h1 {
 
 .h1-color {
   margin-left: 8px;
-  color: #A8DADC;
+  color: black;
 }
 
 .menu {
@@ -122,12 +122,12 @@ h2 {
 h3 {
   padding-top: 1.5rem;
   text-align: center;
-  color: #E63946;
+  color: #1D3557;
 }
 
 .card h2 {
   font-size: 1.5rem;
-  color: #1D3557;
+  color: black;
   margin-bottom: 1rem;
   text-align: center;
 }
@@ -151,7 +151,7 @@ footer {
   text-align: center;
   padding: 1rem;
   background-color: #1D3557;
-  color: #fff;
+  color: white;
 }
 
 footer p {
